Update model to use user instead of creator
